[package]
name = "udpserver"
version = "0.1.0"
authors = ["lyokato <lyo.kato@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["release_max_level_error"] }
simple_logger = "1.11"
socket2 = { version = "0.2.4", features = ["reuseport"] }
crossbeam-channel = "0.5"
nix = "0.20"
hashring = "0.2"
libc = "0.2"
thiserror = "1.0"
num_cpus = "1.0"
ctrlc = "3.1.7"
clap = "2.33"

[build-dependencies]
cc = "1.0"
